--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@nextui-org/button": "2.0.38",
 		"@nextui-org/card": "^2.0.34",
 		"@nextui-org/code": "2.0.33",
+		"@nextui-org/divider": "^2.0.32",
 		"@nextui-org/dropdown": "^2.1.31",
 		"@nextui-org/image": "^2.0.32",
 		"@nextui-org/input": "2.2.5",
@@ -23,6 +24,7 @@
 		"@nextui-org/navbar": "2.0.37",
 		"@nextui-org/skeleton": "^2.0.32",
 		"@nextui-org/snippet": "2.0.43",
+		"@nextui-org/spinner": "^2.0.34",
 		"@nextui-org/switch": "2.0.34",
 		"@nextui-org/system": "2.2.6",
 		"@nextui-org/theme": "2.2.11",
@@ -34,6 +36,7 @@
 		"date-fns": "^4.0.0",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
+		"jwt-decode": "^4.0.0",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
